--- a/text/jtag_riscv.tex
+++ b/text/jtag_riscv.tex
@@ -5,7 +5,7 @@ Tato kapitola popisuje princip přenosu dat na pomocí komunikačního protokolu
 \acs{JTAG} (\acl{JTAG}) je standardizovaná komunikační sběrnice určená pro testování integrovaných obvodů a \acs{DPS} (\acl{DPS}).
 \acs{JTAG} rozhraní definuje tzv. \acs{TAP} (\acl{TAP}), který je skupinou vstupů a výstupů určených k testování. Jelikož \acs{JTAG} je synchronní sběrnice, její rozhraní zahrnuje samostatný vodič pro hodinový signál \textbf{\acs{TCK}} (\acl{TCK}). Dalším vodičem je \textbf{\acs{TMS}} (\acl{TMS}), kterým je přenášen řídicí signál pro stavový automat. Vodiče zajišťující přenos dat jsou označeny \textbf{\acs{TDI}} (\acl{TDI}) a \textbf{\acs{TDO}} (\acl{TDO}). Jako volitelný vodič základního rozhraní je možné připojit také \textbf{\acs{TRST}} (\acl{TRST}), který provádí reset stavového automatu. Reset se využívá především k inicializaci automatu během připojení napájení. \cite {IEEE_1149-1} \cite{JTAG}      
 
-\section{Stavový automat JTAGu}
+\section{Stavový automat - \acs{TAP}}
 Standard IEEE 1149.1 definuje stavový automat, který je hlavní součástí \acs{TAP} (\acl{TAP}). Stavový diagram stavového automatu je zobrazen na obrázku \ref{fig:tap_controller}. Všechny přechody mezi stavy toho automatu jsou plně synchronní se vstupním hodinovým signálem \acs{TCK} a jsou určeny řídicím signálem \acs{TMS}. Důležitou vlastností tohoto stavového automatu je způsob resetování jeho stavu, tedy návrat do stavu \textbf{Test-Logic-Reset}. Reset lze provést pomocí minimálně pěti po sobě jdoucích hodinových taktů, kdy hodnota řídicího signálu \acs{TMS} setrvává v log. 1. Tento způsob resetování je možný provést ze kteréhokoliv stavu automatu. Příkladem může být provedení resetu, když se automat nachází ve stavu \textbf{Shift-DR}. Automat tedy projde postupně stavy \textbf{Exit1-DR}, \textbf{Update-DR}, \textbf{Select-DR-Scan} a \textbf{Select-DR-Scan} až do stavu \textbf{Test-Logic-Reset}. V případě kratší cesty do \textbf{Test-Logic-Reset} stavu setrvává při hodnotě log. 1 na signálu \acs{TMS} v tomto stavu.
 \begin{figure}[H]
   \begin{center}
