--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -26,7 +26,13 @@
 	\acro{DM}
 		{Debug Module}
 	\acro{DMI}
-		{Debug Module Interface}					
+		{Debug Module Interface}
+	\acro{OAC}
+		{Online Activation Code}	
+	\acro{EC}
+		{Extension Code}
+	\acro{CP}
+		{Check Packet}
 	\acro{VHDL}
 		{VHSIC Hardware Description Language}
 	\acro{FPGA}
