--- a/text/jtag_2w.tex
+++ b/text/jtag_2w.tex
@@ -197,8 +197,14 @@ Hodnota přijatá posuvným registrem je porovnávána se dvěma konstantami, kt
 \end{figure}
 
 \subsubsection{Část obvodu pro pro zpracování kontrolní části aktivační sekvence}
-Pro poslední část aktivační sekvence byl navržen a implementován obvod zobrazený na obrázku \ref{fig:cJTAG_sel_cp_circuit}. Popsaný obvod podporuje prodloužení sekvence při příjmu hodnoty CP\_NOP definované v tabulce \ref{tab:cp_body} a následné ukončení sekvence hodnotou CP\_NOP. Nejkratší možnou variantou kontrolní části aktivační sekvence je 
+Pro poslední část aktivační sekvence byl navržen a implementován obvod zobrazený na obrázku \ref{fig:cJTAG_sel_cp_circuit}. Popsaný obvod podporuje prodloužení sekvence při příjmu hodnoty CP\_NOP a následné ukončení sekvence hodnotou CP\_END, které jsou definované v tabulce \ref{tab:cp_body} . % Nejkratší možnou variantou kontrolní části aktivační sekvence je 
 
+Obvod na obrázku je aktivován jakmile předcházející část obvodu uvedená na obrázku \ref{fig:cJTAG_sel_oac_ec_circuit} vyhodnotí shodu hodnoty s jednou z konstant pro výběr varianty \acs{JTAG} protokolu (nastaví se signál \textit{sel\_seq\_match}). V tomto taktu TCKC je povolen 2 a 3-bitový posuvný registr signálem \textit{CE}. Dvoubitový posuvný registr, jehož vstupem je signál TMSC, slouží k vyhodnocení hodnoty CP\_END. Jakmile je hodnota tohoto posuvného registru 00, což odpovídá hodnotě CP\_END pro ukončení sekvence výstupem logické funkce \textit{NOR} log. 1.
+
+Tříbitový posuvný registr slouží k povolení detekce hodnoty CP\_END, nejdříve po třech hodinových taktech TCKC. Důvodem pro zdržení vyhodnocení hodnoty je zpožděno o 3 takty, protože nejkratší možná délka této části sekvence jsou 4 bity. Platná hodnota část CP\_BODY je tudíž nasunuta do 2-bitového posuvného registru nejdříve po třech taktech TCKC, dle průběhu na obrázku \ref{fig:cJTAG_sel_cp_nop}. Tento posuvný registr je vždy před aktivační sekvencí synchronně resetován signálem \textit{sel\_rst}, který je generován vždy po skončení úvodní sekvence popsané v kapitole \ref{subsec:sel_escape_det}. Tato deaktivace po dobu tří taktů by bylo možné realizovat také čítačem od 0 do 3. Tato varianta řešení by ušetřila jeden klopný obvod, ale přidalo jedno logické hradlo. Z hlediska velikosti čipu je tato úprava zanedbatelná, a proto bylo v návrhu ponecháno prvotní řešení.
+
+V případě, že jsou výše popsané podmínky pro ukončení aktivační sekvence splněny je signálem CE povoleno překlopení posledního klopného obvodu s následující nástupnou hranou TCKC. Signál \textit{online\_i} je tedy nastaven v rámci hodinového taktu, kdy je přijímán poslední bit aktivační sekvence označený \textit{Postamble}, dle formátu kontrolní části aktivační sekvence uvedeného v tabulce \ref{tab:cJTAG_sel_cp}. Signál CE všech klopných obvodů je opět deaktivován po dokončení aktivace a je tak zamezeno dalšímu překlápění. Signál \textit{online\_i} je využíván pro povolení funkcionality stavového automatu pro serializaci dat v případě dvouvodičové varianty protokolu a také povoluje propagaci hodinového signálu TCKC pro další části obvodu. 
+s
 \begin{figure}[!h]
   \begin{center}
     \includegraphics[scale=0.78]{obrazky/cJTAG_sel_cp_circuit.pdf}
